--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -17,6 +17,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="50dp"
             android:src="@drawable/logobg" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -36,6 +37,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/righteousregular"
                 android:hint="Insira o usuário"
                 android:maxLength="100"
                 android:padding="20dp" />
@@ -45,6 +47,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
             android:contentDescription="Senha"
             app:boxBackgroundColor="#FFF"
             app:boxBackgroundMode="outline"
@@ -59,12 +62,44 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/righteousregular"
                 android:hint="Insira sua senha"
                 android:inputType="textPassword"
                 android:maxLength="50"
                 android:padding="20dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginTop="10sp"
+            android:fontFamily="@font/righteousregular"
+            android:text="Não tem conta? Cadastre-se" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:text="Entrar" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:text="Sair" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
