--- a/app/src/main/res/layout/splah_layout.xml
+++ b/app/src/main/res/layout/splah_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
-    android:background="#DFAE6A"
+    android:background="@color/fundo"
     android:orientation="vertical"
     tools:context=".SplahActivity">
 
